<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY reportUrl "https://github.com/${username}/services/blob/main/src/main/resources/crypto-report.xlsx?raw=true">]>
<resources>
    <string name="app_name">Crypto info</string>

    <string name="default_date_time_format">HH:mm:ss</string>

    <string name="alwaysActiveWhenInBackgroundLabelText">Always active when in background</string>
    <string name="apiKeyLabelText">API key</string>
    <string name="apiSecretsLabelText">API secret</string>
    <string name="authorizationTokenLabelText">Authorization token</string>
    <string name="backLabelText">Back</string>
    <string name="chartsRotationEnabledLabelText">Charts rotation enabled</string>
    <string name="clearedCryptoAmountLabelText">Cleared am.:</string>
    <string name="clearedBalanceLabelText">Cleared bal.:</string>
    <string name="coinsToBeAlwaysDisplayedLabelText">Always show these coins</string>
    <string name="cryptoAmountLabelText">Amount:</string>
    <string name="currentTimeRetrievingModeLabelText">Current time retrieving mode</string>
    <string name="dateTimeFormat">Date time format</string>
    <string name="fastBootEnabledLabelText">Fast boot</string>
    <string name="enabledLabelText">Enabled</string>
    <string name="intervalBetweenRequestGroupsTextLabel">Interval between request groups (in milliseconds)</string>
    <string name="lastUpdateLabelText">Last update:</string>
    <string name="linkToReport"><![CDATA[<a href="&reportUrl;">Download report</a>]]></string>
    <string name="loadingDataText">Loading</string>
    <string name="reportUrl">&reportUrl;</string>
    <string name="seedForChartColorsLabelText">Seed for chart colors</string>
    <string name="settingsLabelText">Settings</string>
    <string name="showAUPEILabelText">Show the absolute unit price to equalize the investment</string>
    <string name="showClearedBalanceLabelText">Show cleared balance</string>
    <string name="showNaNAmountsLabelText">Show NaN amounts</string>
    <string name="showDifferenceBetweenUPAndAUPEILabelText">Show the difference between the unit price and the absolute unit price to equalize the investment</string>
    <string name="showDifferenceBetweenUPAndRUPEILabelText">Show the difference between the unit price and the relative unit price to equalize the investment</string>
    <string name="showRUPEILabelText">Show the relative unit price to equalize the investment</string>
    <string name="taxLabelText">Tax %</string>
    <string name="totalInvestmentLabelText">Total investment</string>
    <string name="timeOffsetLabelText">Time offset (in milliseconds)</string>
    <string name="threadPoolSizeTextLabel">Thread pool size</string>
    <string name="unitPriceRetrievingModeLabelText">Unit price retrieving mode</string>
    <string name="updateReportButtonText">Update report</string>
    <string name="useAlwaysTheDollarCurrencyForBalancesLabelText">Use always the Dollar currency for balances</string>

    <!-- Coin table labels -->
    <string name="amountInEuroLabelText">Am (€)</string>
    <string name="amountInUSDLabelText">Am ($)</string>
    <string name="aUPEIInUSDLabelText">AUPEI™ ($)</string>
    <string name="clearedAmountInEuroLabelText">Cl Am (€)</string>
    <string name="clearedAmountInUSDLabelText">Cl Am ($)</string>
    <string name="coinLabelText">Coin</string>
    <string name="differenceBetweenUnitPriceAndAUPEIInUSDLabelText">UP-AUPEI™ ($)</string>
    <string name="differenceBetweenUnitPriceAndRUPEIInUSDLabelText">UP-RUPEI™ ($)</string>
    <string name="lastUpdateForCoinLabelText">Last upd</string>
    <string name="quantityLabelText">Quantity</string>
    <string name="rUPEIInUSDLabelText">RUPEI™ ($)</string>
    <string name="unitPriceInUSDLabelText">UP ($)</string>

</resources>